// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link Stories blackshould match snapshot 1`] = `
<body>
  <div>
    <a
      href="/href"
    >
      <div
        class="focus:outline-none transition duration-200 rounded-sm py-1 px-2 text-gray-900 hover:text-gray-800   "
      >
        <div
          class="flex items-center justify-center px-4 py-2 space-x-2 rounded-sm"
        >
          <span>
            Label
          </span>
        </div>
      </div>
    </a>
  </div>
</body>
`;

exports[`Link Stories blockshould match snapshot 1`] = `
<body>
  <div>
    <a
      href="/href"
    >
      <div
        class="focus:outline-none transition duration-200 rounded-sm py-1 px-2 text-gray-900 hover:text-gray-800   "
      >
        <div
          class="flex items-center justify-center px-4 py-2 space-x-2 rounded-sm"
        >
          <span>
            Label
          </span>
        </div>
      </div>
    </a>
  </div>
</body>
`;

exports[`Link Stories onDarkshould match snapshot 1`] = `
<body>
  <div>
    <div
      class="w-full p-20 bg-gray-900"
    >
      <a
        href="/href"
      >
        <div
          class="focus:outline-none transition duration-200 rounded-sm py-1 px-2 text-teal-200 hover:text-teal-300   "
        >
          <div
            class="flex items-center justify-center px-4 py-2 space-x-2 rounded-sm"
          >
            <span>
              Label
            </span>
          </div>
        </div>
      </a>
    </div>
  </div>
</body>
`;

exports[`Link Stories primaryshould match snapshot 1`] = `
<body>
  <div>
    <a
      href="/href"
    >
      <div
        class="focus:outline-none transition duration-200 rounded-sm py-1 px-2 text-gray-900 hover:text-gray-800   "
      >
        <div
          class="flex items-center justify-center px-4 py-2 space-x-2 rounded-sm"
        >
          <span>
            Label
          </span>
        </div>
      </div>
    </a>
  </div>
</body>
`;

exports[`Link Stories redshould match snapshot 1`] = `
<body>
  <div>
    <a
      href="/href"
    >
      <div
        class="focus:outline-none transition duration-200 rounded-sm py-1 px-2 text-red-700 hover:text-red-600   "
      >
        <div
          class="flex items-center justify-center px-4 py-2 space-x-2 rounded-sm"
        >
          <span>
            Label
          </span>
        </div>
      </div>
    </a>
  </div>
</body>
`;

exports[`Link Stories withIconLeftAndRightshould match snapshot 1`] = `
<body>
  <div>
    <a
      href="/href"
    >
      <div
        class="focus:outline-none transition duration-200 rounded-sm py-1 px-2 text-gray-900 hover:text-gray-800   "
      >
        <div
          class="flex items-center justify-center px-4 py-2 space-x-2 rounded-sm"
        >
          <span>
            <svg
              class="w-6 h-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 21a4 4 0 01-4-4V5a2 2 0 012-2h4a2 2 0 012 2v12a4 4 0 01-4 4zm0 0h12a2 2 0 002-2v-4a2 2 0 00-2-2h-2.343M11 7.343l1.657-1.657a2 2 0 012.828 0l2.829 2.829a2 2 0 010 2.828l-8.486 8.485M7 17h.01"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </span>
          <span>
            Label
          </span>
          <span>
            <svg
              class="w-6 h-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 9l-7 7-7-7"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </span>
        </div>
      </div>
    </a>
  </div>
</body>
`;

exports[`Link Stories withIconLeftshould match snapshot 1`] = `
<body>
  <div>
    <a
      href="/href"
    >
      <div
        class="focus:outline-none transition duration-200 rounded-sm py-1 px-2 text-gray-900 hover:text-gray-800   "
      >
        <div
          class="flex items-center justify-center px-4 py-2 space-x-2 rounded-sm"
        >
          <span>
            <svg
              class="w-6 h-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 14l9-5-9-5-9 5 9 5z"
              />
              <path
                d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
              />
              <path
                d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </span>
          <span>
            Label
          </span>
        </div>
      </div>
    </a>
  </div>
</body>
`;

exports[`Link Stories withIconRightshould match snapshot 1`] = `
<body>
  <div>
    <a
      href="/href"
    >
      <div
        class="focus:outline-none transition duration-200 rounded-sm py-1 px-2 text-gray-900 hover:text-gray-800   "
      >
        <div
          class="flex items-center justify-center px-4 py-2 space-x-2 rounded-sm"
        >
          <span>
            Label
          </span>
          <span>
            <svg
              class="w-6 h-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 5l7 7m0 0l-7 7m7-7H3"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </span>
        </div>
      </div>
    </a>
  </div>
</body>
`;
